# beep-rtc

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  loki-config.yaml
grafana/: logs.json
helm/: Chart.yaml  values.yaml
helm/templates/: _helper.tpl  deployment.yaml  ingress.yaml  ingressRouteUdp.yaml  service.yaml
src/: main.rs
src/logging/: log_type.rs  mod.rs
src/middleware/: mod.rs  verify_jwt.rs
src/signalling/: mod.rs  signaling_controller.rs  web_server.rs
src/transport/: handlers.rs  mod.rs
src/util/: net.rs
