[package]
name = "beep-sfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-appender = "0.2"
sfu = "0.0.3"
retty = "0.27.0"
bytes = "1.5"
log = "0.4"
base64 = "0.22"
serde = "1"
serde_json = { version = "1", features = [] }
rand = "0.8"
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
ring = "0.17"
sha2 = "0.10"
rustls = "0.21"
url = { version = "2", features = [] }
hex = { version = "0.4", features = [] }
opentelemetry = { version = "0.22.0", features = ["metrics", "logs", "logs_level_enabled", "trace"] }

shared = { version = "0.1.1", package = "rtc-shared" }
sdp = { version = "0.1.1", package = "rtc-sdp" }
stun = { version = "0.1.1", package = "rtc-stun" }
rtp = { version = "0.1", package = "rtc-rtp" }
rtcp = { version = "0.1", package = "rtc-rtcp" }
srtp = { version = "0.1.1", package = "rtc-srtp" }
dtls = { version = "0.1.1", package = "rtc-dtls" }
sctp = { version = "0.1.1", package = "rtc-sctp" }
datachannel = { version = "0.1", package = "rtc-datachannel" }
tracing-actix-web = { version=  "0.7", features = ["opentelemetry_0_22"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
actix = "0.13.3"
actix-web = { version = "4.5.1", feature = ["openssl"], features = ["openssl"] }
openssl = "0.10.64"
actix-cors = "0.7.0"

systemstat = "0.2"

# common
chrono = "0.4.34"
env_logger = "0.11.3"
clap = { version = "4.5", features = ["derive"] }
opentelemetry_sdk = { version = "0.22", features = ["tokio", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }

# sync_chat
wg = "0.7"
crossbeam-channel = "0.5"
ctrlc = "3.4"

# tests
webrtc = "0.10.1"
hyper = { version = "0.14.28", features = ["full"] }
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
reqwest = "0.12.4"
tokio = "1.37.0"
actix-rt = "2.9.0"
serde_derive = "1.0.202"
